<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:paddingEnd="24dp"
     android:orientation="vertical"
     android:paddingBottom="28dp"
     android:paddingStart="24dp"
     android:paddingTop="12dp">

    <View
         android:layout_height="4dp"
         android:layout_width="40dp"
         android:layout_marginBottom="18dp"
         android:background="@drawable/bg_drag_handle"
         android:layout_gravity="center_horizontal" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textSize="18sp"
         android:textColor="?attr/colorOnSurface"
         android:text="@string/content_desc_save"
         android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:hint="@string/hint_request_name"
         style="@style/Widget.GhostIDE.TextInputLayout"
         android:layout_marginTop="18dp"
         android:id="@+id/requestNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:maxLines="1"
             android:inputType="text"
             android:id="@+id/requestNameInput" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:hint="@string/hint_collection_name"
         style="@style/Widget.GhostIDE.TextInputLayout"
         android:layout_marginTop="12dp"
         android:id="@+id/collectionNameInputLayout">

        <AutoCompleteTextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:maxLines="1"
             android:inputType="text"
             android:id="@+id/collectionNameInput" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textSize="12sp"
         android:textColor="?attr/colorOnSurfaceVariant"
         android:layout_marginTop="4dp"
         android:text="@string/label_no_collection" />

    <com.google.android.material.button.MaterialButton
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
         android:id="@+id/confirmSaveButton"
         android:text="@string/action_save" />

</LinearLayout>
